Fix alignment for nav section

--- a/take-6/assets/css/custom.css
+++ b/take-6/assets/css/custom.css
@@ -69,3 +69,7 @@ svg.bottom-wave path {
 .pricing ul li {
   padding-bottom: 16px;
 }
+
+header a {
+  max-width: 10%;
+}
